Implémentation de FilmController et ses méthodes
