# storage/docs/api-docs.json
@@ -16,6 +16,12 @@
         "http",
         "https"
     ],
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
     "paths": {
         "/film": {
             "get": {
@@ -23,19 +29,110 @@
                     "film"
                 ],
                 "summary": "Display a listing of films.",
-                "produces": [
-                    "application/xml",
-                    "application/json"
-                ],
                 "responses": {
                     "200": {
                         "description": "successful operation",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "\u20ac/definitions/Film"
+                                "$ref": "#/definitions/Film"
                             }
                         }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "film"
+                ],
+                "summary": "Create a film",
+                "description": "Use this method to create a film",
+                "operationId": "createFilm",
+                "consumes": [
+                    "multipart/form-data",
+                    "application/x-www-form-urlencoded"
+                ],
+                "parameters": [
+                    {
+                        "name": "titre",
+                        "in": "formData",
+                        "description": "Name of the film",
+                        "required": true,
+                        "type": "string",
+                        "maximum": "255"
+                    },
+                    {
+                        "name": "resum",
+                        "in": "formData",
+                        "description": "Resume of the film",
+                        "required": true,
+                        "type": "string",
+                        "maximum": "255"
+                    },
+                    {
+                        "name": "date_debut_affiche",
+                        "in": "formData",
+                        "description": "Date d\u00e9but affiche",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "date_fin_affiche",
+                        "in": "formData",
+                        "description": "Date fin affiche",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "duree_minutes",
+                        "in": "formData",
+                        "description": "Dur\u00e9e en minutes",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "annee_production",
+                        "in": "formData",
+                        "description": "Ann\u00e9e de production",
+                        "required": true,
+                        "type": "integer",
+                        "maximum": "4"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Film created"
+                    },
+                    "422": {
+                        "description": "Champs manquant obligatoire ou incorrect"
+                    }
+                }
+            }
+        },
+        "/film/{id_film}": {
+            "delete": {
+                "tags": [
+                    "film"
+                ],
+                "summary": "Delete a film",
+                "description": "Delete a film through an ID",
+                "operationId": "deleteFilm",
+                "parameters": [
+                    {
+                        "name": "id_film",
+                        "in": "path",
+                        "description": "Film ID to delete",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "FIlm deleted"
+                    },
+                    "404": {
+                        "description": "Invalid film value"
                     }
                 }
             }
